--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,7 +10,8 @@
     overflow: auto;
 
     a {
-        color: white;
+        color: var(--bg-color);
+        transition: color $ani-time-1;
         font-weight: bold;
         letter-spacing: 5px;
         display: flex;
@@ -26,8 +27,9 @@
 header {
     position: sticky;
     inset: 0 0 auto 0;
-    background-color: aliceblue;
-    background-image: linear-gradient(transparent, rgba(32, 32, 32, .1));
+    background-color: var(--bg-color);
+    transition: background-color $ani-time-1;
+    background-image: linear-gradient(rgba(247, 247, 247, 0.08), rgba(32, 32, 32, .1));
     box-shadow: 0 0 5px #0000002b;
     display: flex;
     justify-content: center;
