--- a/src/components/menu/food.scss
+++ b/src/components/menu/food.scss
@@ -21,6 +21,7 @@ $alert-color: rgb(202, 2, 2);
         font-size: 20px;
     }
     .title {
+        color: var(--text-color);
         font-weight: bold;
         font-size: 18px;
         line-height: 22px;
