--- a/src/global.scss
+++ b/src/global.scss
@@ -9,10 +9,15 @@
 :root {
   --primary-color: hsl(34, 49%, 63%);
   --primary-color-2: hsla(34, 49%, 63%, .8);
-  --secundary-color: hsl(35, 28%, 25%);
+  --secundary-color: hsl(35, 28%, 39%);
   --text-color: black;
   --bg-color: white;
   --bg-color-2: rgba(255, 255, 255, 0.9);
+}
+html.dark {
+  --text-color: rgb(218, 218, 218);
+  --bg-color: rgb(34, 34, 34);
+  --bg-color-2: rgba(28, 28, 28, 0.9);
 }
 
 html {
@@ -44,6 +49,8 @@ body {
   margin: 0;
   line-height: inherit;
   min-width: 260px;
+  background-color: var(--bg-color-2);
+  transition: background-color $ani-time-1;
 }
 
 main {
